# hexstrike-ai

./: CLAUDE.md  MCP_README_CN.md  README.md  README_CN.md  REFACTOR_SUMMARY.md  hexstrike-ai-mcp.json  hexstrike_mcp.py  hexstrike_mcp_new.py  hexstrike_server.py  hexstrike_server_new.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test_refactored_system.py  test_simple.py  vuln_intel_config.json
hexstrike_ai/: __init__.py
hexstrike_ai/api/: __init__.py  routes.py  server.py
hexstrike_ai/config/: __init__.py  colors.py  logger_config.py  settings.py
hexstrike_ai/core/: __init__.py  base_classes.py  cache_system.py  failure_recovery.py  process_manager.py  resource_monitor.py
hexstrike_ai/intelligence/: __init__.py  decision_engine.py
hexstrike_ai/mcp/: __init__.py  server.py
hexstrike_ai/mcp/client/: __init__.py  connection_manager.py  hexstrike_client.py
hexstrike_ai/mcp/tools/: __init__.py  manager.py  network_tools.py  system_tools.py  web_tools.py
hexstrike_ai/tools/: __init__.py  manager.py
hexstrike_ai/visualization/: __init__.py  visual_engine.py
